--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
         </div>
 
-        <div class="col-5 ml-auto my-5">
+        <div class="col-md-5 col-sm-12 ml-auto my-5">
           <p class="leadmenor" style="line-height: 2.2rem">Atuante em diversas vertentes aplicadas ao mercado digital:
             <span class="font-weight-bold">UI/UX
               Designer</span>, <span class="font-weight-bold">Front-end</span>
@@ -93,8 +93,8 @@
   <!-- OBJETIVOS  -->
   <section class="container-fluid bg-objetivos">
     <div class="row ml-5">
-      <div class="col-md-3 ml-5 d-flex  flex-column align-items-end">
-        <figure class="objetivos-path">
+      <div class="col-md-3 col-sm-12 ml-5 d-flex flex-column align-items-end">
+        <figure class="objetivos-path hidden-sm-up">
           <img style="width: 300px" src="img/paths/path3.png">
         </figure>
         <figure class="objetivos-figure mb-3 pb-5">
@@ -102,7 +102,7 @@
         </figure>
       </div>
 
-      <div class="col-md-4 ml-5 d-flex flex-column justify-content-center" id="10">
+      <div class="col-md-4 col-sm-12 ml-5 d-flex flex-column justify-content-center" id="10">
         <h3 class="txt-objetivos font-weight-bold">OBJETIVOS</h3>
         <p class="text-white lead">Participar do desenvolvimento de ideias com propósito e ter a oportunidade de criar
           utilizando conceitos que
@@ -390,8 +390,8 @@
 
 
 
-
-  <section class="container-fluid p-0" id="20">
+  <!-- gallery  -->
+  <!-- <section class="container-fluid p-0" id="20">
     <div class="wrapper">
 
       <div class="portfolio-item">
@@ -418,11 +418,6 @@
         </a>
       </div>
 
-      <!-- <div class="portfolio-item">
-        <a href="/img/trabalhos/patinhas.jpg" data-lightbox="gallery">
-          <img src="/img/trabalhos/patinhas.jpg">
-        </a>
-      </div> -->
 
       <div class="portfolio-item">
         <a href="/img/trabalhos/ciclojam.jpg" data-lightbox="gallery">
@@ -430,11 +425,6 @@
         </a>
       </div>
 
-      <!-- <div class="portfolio-item">
-        <a href="/img/trabalhos/apsus8.jpg" data-lightbox="gallery">
-          <img src="/img/trabalhos/apsus8.jpg">
-        </a>
-      </div> -->
 
       <div class="portfolio-item">
         <a href="/img/trabalhos/daimar.jpg" data-lightbox="gallery">
@@ -448,11 +438,6 @@
         </a>
       </div>
 
-      <!-- <div class="portfolio-item">
-        <a href="/img/trabalhos/mimariah.jpg" data-lightbox="gallery">
-          <img src="/img/trabalhos/mimariah.jpg">
-        </a>
-      </div> -->
 
       <div class="portfolio-item">
         <a href="/img/trabalhos/sinduscon.jpg" data-lightbox="gallery">
@@ -460,7 +445,7 @@
         </a>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- fim do gallery  -->
 
 
